# Multithreaded-Barber-Shop-Simulator

./: README.md
ZSO1_BarberShop/: CMakeLists.txt  main.c
ZSO2_IPC/ipc/: CMakeLists.txt
